# xaric

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.1  ChangeSet  INSTALL  Makefile  Makefile.am  Makefile.in  Makerules.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  alist.c  alist.h  alloca.c  autogen  autogen.sh  cmd_help.c  cmd_hostname.c  cmd_modes.c  cmd_orignick.c  cmd_save.c  cmd_scan.c  cmd_who.c  commands.h  config.h.in  config.param  configure  configure.ac  configure.in  ctcp.c  ctcp.h  dcc.c  dcc.h  debug.c  (+113 more)
debian/: changelog  control  copyright  rules
doc/: Makefile.in  module.mk  rfc1459.txt  xaric.1  xaric.help  xaric.servers  xaric.xpm
extra/: Makefile  alloca.c  freeaddrinfo.c  gai_strerror.c  getnameinfo.c  gn_ipv46.c  inet_ntop.c  inet_pton.c  setenv.c  strtoul.c
help/: abort  about  admin  ajoin  away  ban  banstat  bantype  bk  bye  cd  channel  chanst  chops  clearauto  clearlock  cleartab  connect  credit  ctcp  cycle  date  dban  dc  dcc  dcg  dcx  deop  describe  die  disconnect  dop  dump  exec  exit  flush  fprot  help  history  host  (+83 more)
help/set/: set
include/: .cvsignore  Makefile.am  alias.h  alist.h  bitlist.h  cmd_orignick.h  commands.h  config.h  config.h.in  ctcp.h  dcc.h  debug.h  defaults.h  defs.h.in  exec.h  expr.h  files.h  format.h  fset.h  funny.h  history.h  hook.h  iflist.h  input.h  irc.h  irc_std.h  ircaux.h  ircterm.h  keys.h  linklist.h  lister.h  llist.h  misc.h  module.mk  names.h  newio.h  notify.h  numbers.h  output.h  parse.h  (+21 more)
perl-scripts/: Makefile.am
scripts/: Makeconfig.in  configure.in  depend.sh  module.mk
source/: Makefile  Makefile.am  alias.c  alist.c  alloca.c  bitlist.c  bsearch.c  cmd_help.c  cmd_hostname.c  cmd_modes.c  cmd_orignick.c  cmd_save.c  cmd_scan.c  cmd_who.c  commands.c  ctcp.c  dcc.c  debug.c  env.c  exec.c  expr.c  files.c  flood.c  fset.c  functions.c  funny.c  hash.c  help.c  history.c  hook.c  iflist.c  ignore.c  input.c  irc.c  ircaux.c  ircsig.c  ircterm.c  keys.c  lastlog.c  list.c  (+41 more)
source/cmd/: Makefile  cmd_help.c
source/tst/: Makefile  tst_build.c  tst_flush.c  tst_init.c  tst_insert.c  tst_remove.c  tst_search.c
www/: index.html
